[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fairness_constraint"
version = "1.0.0"
description = "Fair supervised learning through constraints on smooth nonconvex unfairness-measure surrogates"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.0.0",
    "matplotlib>=3.0.0",
    "torch>=1.7.0",
    "scikit-learn>=0.24.0",
    "folktables>=0.0.11",
    "psutil",
]

[tool.setuptools.packages.find]
where = ["src"]
